deploy/k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glassbox
  namespace: genai-demo
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: ${STATIC_IP_NAME}
    networking.gke.io/managed-certificates: glassbox-cert
    networking.gke.io/v1beta1.FrontendConfig: glassbox
spec:
  defaultBackend: {service: {name: glassbox, port: {number: 80}}}
